Update troubleshooting.md