@@ -18,7 +18,7 @@ This can be fixed by either uninstalling and reinstalling Java or through using 
 
 ## Exception in thread "main" java.lang.NoClassDefFoundError: javafx/stage/Stage
 
-JavaFX is only typically bundled with Oracle Java. On all OpenJDK/OpenJRE's you will need to manually download OpenJFX, extract it, and potentially add it to the launch commands for Chunky.
+JavaFX is only typically bundled with Oracle Java. On all OpenJDK/OpenJRE's you will need to manually download OpenJFX, extract it, and potentially launch Chunky Launcher and add to the `Java Options` field in the launcher: `--module-path path\to\javafx\lib --add-modules javafx.controls,javafx.fxml`
 
 For Windows we cover this under [Universal JAR - Chunky Launcher](../../getting_started/installing#universal-jar-chunky-launcher)
 
